struxt/struxt.parsers/src/main/go/struxt.c.c
/* A recursive-descent parser generated by peg 0.1.2 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 24

#include <stdbool.h>
#include <assert.h>

#ifndef YY_VARIABLE
#define YY_VARIABLE(T)	static T
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yybegin= yypos, 1)
#endif
#ifndef YY_END
#define YY_END		( yyend= yypos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif

#ifndef YY_PART

typedef void (*yyaction)(char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

YY_VARIABLE(char *   ) yybuf= 0;
YY_VARIABLE(int	     ) yybuflen= 0;
YY_VARIABLE(int	     ) yypos= 0;
YY_VARIABLE(int	     ) yylimit= 0;
YY_VARIABLE(char *   ) yytext= 0;
YY_VARIABLE(int	     ) yytextlen= 0;
YY_VARIABLE(int	     ) yybegin= 0;
YY_VARIABLE(int	     ) yyend= 0;
YY_VARIABLE(int	     ) yytextmax= 0;
YY_VARIABLE(yythunk *) yythunks= 0;
YY_VARIABLE(int	     ) yythunkslen= 0;
YY_VARIABLE(int      ) yythunkpos= 0;
YY_VARIABLE(YYSTYPE  ) yy;
YY_VARIABLE(YYSTYPE *) yyval= 0;
YY_VARIABLE(YYSTYPE *) yyvals= 0;
YY_VARIABLE(int      ) yyvalslen= 0;

YY_LOCAL(int) yyrefill(void)
{
  int yyn;
  while (yybuflen - yypos < 512)
    {
      yybuflen *= 2;
      yybuf= realloc(yybuf, yybuflen);
    }
  YY_INPUT((yybuf + yypos), yyn, (yybuflen - yypos));
  if (!yyn) return 0;
  yylimit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(void)
{
  if (yypos >= yylimit && !yyrefill()) return 0;
  ++yypos;
  return 1;
}

YY_LOCAL(int) yymatchChar(int c)
{
  if (yypos >= yylimit && !yyrefill()) return 0;
  if (yybuf[yypos] == c)
    {
      ++yypos;
      yyprintf((stderr, "  ok   yymatchChar(%c) @ %s\n", c, yybuf+yypos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(%c) @ %s\n", c, yybuf+yypos));
  return 0;
}

YY_LOCAL(int) yymatchString(char *s)
{
  int yysav= yypos;
  while (*s)
    {
      if (yypos >= yylimit && !yyrefill()) return 0;
      if (yybuf[yypos] != *s)
        {
          yypos= yysav;
          return 0;
        }
      ++s;
      ++yypos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(unsigned char *bits)
{
  int c;
  if (yypos >= yylimit && !yyrefill()) return 0;
  c= yybuf[yypos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yypos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yybuf+yypos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yybuf+yypos));
  return 0;
}

YY_LOCAL(void) yyDo(yyaction action, int begin, int end)
{
  while (yythunkpos >= yythunkslen)
    {
      yythunkslen *= 2;
      yythunks= realloc(yythunks, sizeof(yythunk) * yythunkslen);
    }
  yythunks[yythunkpos].begin=  begin;
  yythunks[yythunkpos].end=    end;
  yythunks[yythunkpos].action= action;
  ++yythunkpos;
}

YY_LOCAL(int) yyText(int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yytextlen < (yyleng - 1))
	{
	  yytextlen *= 2;
	  yytext= realloc(yytext, yytextlen);
	}
      memcpy(yytext, yybuf + begin, yyleng);
    }
  yytext[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(void)
{
  int pos;
  for (pos= 0;  pos < yythunkpos;  ++pos)
    {
      yythunk *thunk= &yythunks[pos];
      int yyleng= thunk->end ? yyText(thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yytext));
      thunk->action(yytext, yyleng);
    }
  yythunkpos= 0;
}

YY_LOCAL(void) yyCommit()
{
  if ((yylimit -= yypos))
    {
      memmove(yybuf, yybuf + yypos, yylimit);
    }
  yybegin -= yypos;
  yyend -= yypos;
  yypos= yythunkpos= 0;
}

YY_LOCAL(int) yyAccept(int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone();
      yyCommit();
    }
  return 1;
}

YY_LOCAL(void) yyPush(char *text, int count)	{ yyval += count; }
YY_LOCAL(void) yyPop(char *text, int count)	{ yyval -= count; }
YY_LOCAL(void) yySet(char *text, int count)	{ yyval[count]= yy; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yythunkpos0)

YY_RULE(int) yy_exp(); /* 24 */
YY_RULE(int) yy_frac(); /* 23 */
YY_RULE(int) yy_int(); /* 22 */
YY_RULE(int) yy_char(); /* 21 */
YY_RULE(int) yy_number(); /* 20 */
YY_RULE(int) yy_str(); /* 19 */
YY_RULE(int) yy_POSTNS(); /* 18 */
YY_RULE(int) yy_PRENS(); /* 17 */
YY_RULE(int) yy_id(); /* 16 */
YY_RULE(int) yy_attribute(); /* 15 */
YY_RULE(int) yy_OP(); /* 14 */
YY_RULE(int) yy_attr(); /* 13 */
YY_RULE(int) yy_name(); /* 12 */
YY_RULE(int) yy_literal(); /* 11 */
YY_RULE(int) yy_children(); /* 10 */
YY_RULE(int) yy_tag(); /* 9 */
YY_RULE(int) yy_comment(); /* 8 */
YY_RULE(int) yy_cdata(); /* 7 */
YY_RULE(int) yy_attributes(); /* 6 */
YY_RULE(int) yy_node(); /* 5 */
YY_RULE(int) yy_doctype(); /* 4 */
YY_RULE(int) yy_xmldecl(); /* 3 */
YY_RULE(int) yy__(); /* 2 */
YY_RULE(int) yy_struxt(); /* 1 */

YY_ACTION(void) yy_1_str(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_str\n"));
  printf("string\n");;
}
YY_ACTION(void) yy_3_attributes(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_3_attributes\n"));
  printf("attribute.3\n");;
}
YY_ACTION(void) yy_2_attributes(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_2_attributes\n"));
  printf("attribute.2\n");;
}
YY_ACTION(void) yy_1_attributes(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_attributes\n"));
  printf("attribute.1\n");;
}
YY_ACTION(void) yy_1_literal(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_literal\n"));
  printf("literal\n");;
}
YY_ACTION(void) yy_1_name(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_name\n"));
  printf("name\n");;
}
YY_ACTION(void) yy_1_attribute(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_attribute\n"));
  printf("attribute\n");;
}
YY_ACTION(void) yy_4_attr(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_4_attr\n"));
  printf("attr.4\n");;
}
YY_ACTION(void) yy_3_attr(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_3_attr\n"));
  printf("attr.3\n");;
}
YY_ACTION(void) yy_2_attr(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_2_attr\n"));
  printf("attr.2\n");;
}
YY_ACTION(void) yy_1_attr(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_attr\n"));
  printf("attr.1\n");;
}
YY_ACTION(void) yy_1_tag(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_tag\n"));
  printf("tag\n");;
}
YY_ACTION(void) yy_1_node(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_node\n"));
  printf("node\n");;
}
YY_ACTION(void) yy_1_cdata(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_cdata\n"));
  printf("cdata\n");;
}
YY_ACTION(void) yy_1_doctype(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_doctype\n"));
  printf("?xml.2\n");;
}
YY_ACTION(void) yy_1_xmldecl(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_xmldecl\n"));
  printf("?xml.1\n");;
}
YY_ACTION(void) yy_1_struxt(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_struxt\n"));
  printf("struxt\n");;
}

YY_RULE(int) yy_exp()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "exp"));  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\000\000\040\000\000\000\040\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l1;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\050\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l1;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l1;
  l2:;	
  {  int yypos3= yypos, yythunkpos3= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l3;  goto l2;
  l3:;	  yypos= yypos3; yythunkpos= yythunkpos3;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "exp", yybuf+yypos));
  return 1;
  l1:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "exp", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_frac()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "frac"));  if (!yymatchChar('.')) goto l4;  if (!yy_int()) goto l4;
  yyprintf((stderr, "  ok   %s @ %s\n", "frac", yybuf+yypos));
  return 1;
  l4:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "frac", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_int()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "int"));  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l5;
  l6:;	
  {  int yypos7= yypos, yythunkpos7= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\003\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l7;  goto l6;
  l7:;	  yypos= yypos7; yythunkpos= yythunkpos7;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "int", yybuf+yypos));
  return 1;
  l5:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "int", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_char()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "char"));  if (!yymatchChar('\'')) goto l8;  if (!yymatchDot()) goto l8;  if (!yymatchChar('\'')) goto l8;
  yyprintf((stderr, "  ok   %s @ %s\n", "char", yybuf+yypos));
  return 1;
  l8:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "char", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_number()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "number"));
  {  int yypos10= yypos, yythunkpos10= yythunkpos;  if (!yymatchChar('-')) goto l10;  goto l11;
  l10:;	  yypos= yypos10; yythunkpos= yythunkpos10;
  }
  l11:;	  if (!yy_int()) goto l9;
  {  int yypos12= yypos, yythunkpos12= yythunkpos;  if (!yy_frac()) goto l12;  goto l13;
  l12:;	  yypos= yypos12; yythunkpos= yythunkpos12;
  }
  l13:;	
  {  int yypos14= yypos, yythunkpos14= yythunkpos;  if (!yy_exp()) goto l14;  goto l15;
  l14:;	  yypos= yypos14; yythunkpos= yythunkpos14;
  }
  l15:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "number", yybuf+yypos));
  return 1;
  l9:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "number", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_str()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "str"));  if (!yymatchChar('"')) goto l16;  if (!yymatchClass((unsigned char *)"\377\377\377\377\373\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377")) goto l16;
  l17:;	
  {  int yypos18= yypos, yythunkpos18= yythunkpos;  if (!yymatchClass((unsigned char *)"\377\377\377\377\373\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377")) goto l18;  goto l17;
  l18:;	  yypos= yypos18; yythunkpos= yythunkpos18;
  }  if (!yymatchChar('"')) goto l16;  yyDo(yy_1_str, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "str", yybuf+yypos));
  return 1;
  l16:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "str", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_POSTNS()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "POSTNS"));
  {  int yypos20= yypos, yythunkpos20= yythunkpos;  if (!yymatchChar('@')) goto l21;  goto l20;
  l21:;	  yypos= yypos20; yythunkpos= yythunkpos20;  if (!yymatchChar('\\')) goto l19;
  }
  l20:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "POSTNS", yybuf+yypos));
  return 1;
  l19:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "POSTNS", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_PRENS()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "PRENS"));
  {  int yypos23= yypos, yythunkpos23= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\000\000\000\012\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l24;  goto l23;
  l24:;	  yypos= yypos23; yythunkpos= yythunkpos23;  if (!yymatchString("::")) goto l22;
  }
  l23:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "PRENS", yybuf+yypos));
  return 1;
  l22:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "PRENS", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_id()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "id"));  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\000\000\376\377\377\207\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l25;
  l26:;	
  {  int yypos27= yypos, yythunkpos27= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\040\377\003\376\377\377\207\376\377\377\007\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l27;  goto l26;
  l27:;	  yypos= yypos27; yythunkpos= yythunkpos27;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "id", yybuf+yypos));
  return 1;
  l25:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "id", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_attribute()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "attribute"));
  {  int yypos29= yypos, yythunkpos29= yythunkpos;  if (!yy_name()) goto l30;
  l31:;	
  {  int yypos32= yypos, yythunkpos32= yythunkpos;  if (!yy__()) goto l32;  goto l31;
  l32:;	  yypos= yypos32; yythunkpos= yythunkpos32;
  }  if (!yymatchChar(':')) goto l30;
  l33:;	
  {  int yypos34= yypos, yythunkpos34= yythunkpos;  if (!yy__()) goto l34;  goto l33;
  l34:;	  yypos= yypos34; yythunkpos= yythunkpos34;
  }  if (!yy_literal()) goto l30;  yyDo(yy_1_attribute, yybegin, yyend);  goto l29;
  l30:;	  yypos= yypos29; yythunkpos= yythunkpos29;  if (!yy_attr()) goto l28;
  }
  l29:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "attribute", yybuf+yypos));
  return 1;
  l28:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "attribute", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_OP()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "OP"));
  {  int yypos36= yypos, yythunkpos36= yythunkpos;  if (!yymatchChar('<')) goto l37;  goto l36;
  l37:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchString("<<")) goto l38;  goto l36;
  l38:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchString("<-")) goto l39;  goto l36;
  l39:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchString("<->")) goto l40;  goto l36;
  l40:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchString("->")) goto l41;  goto l36;
  l41:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchString(">>")) goto l42;  goto l36;
  l42:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchChar('>')) goto l43;  goto l36;
  l43:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchChar('~')) goto l44;  goto l36;
  l44:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchChar('$')) goto l45;  goto l36;
  l45:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchChar('%')) goto l46;  goto l36;
  l46:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchChar('^')) goto l47;  goto l36;
  l47:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchChar('&')) goto l48;  goto l36;
  l48:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchString("&&")) goto l49;  goto l36;
  l49:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchChar('*')) goto l50;  goto l36;
  l50:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchString("**")) goto l51;  goto l36;
  l51:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchChar('-')) goto l52;  goto l36;
  l52:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchChar('+')) goto l53;  goto l36;
  l53:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchChar('=')) goto l54;  goto l36;
  l54:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchChar('|')) goto l55;  goto l36;
  l55:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchString("||")) goto l56;  goto l36;
  l56:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchChar('/')) goto l57;  goto l36;
  l57:;	  yypos= yypos36; yythunkpos= yythunkpos36;  if (!yymatchChar('?')) goto l35;
  }
  l36:;	
  l58:;	
  {  int yypos59= yypos, yythunkpos59= yythunkpos;  if (!yy__()) goto l59;  goto l58;
  l59:;	  yypos= yypos59; yythunkpos= yythunkpos59;
  }
  yyprintf((stderr, "  ok   %s @ %s\n", "OP", yybuf+yypos));
  return 1;
  l35:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "OP", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_attr()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "attr"));
  {  int yypos61= yypos, yythunkpos61= yythunkpos;  if (!yy_name()) goto l62;
  l63:;	
  {  int yypos64= yypos, yythunkpos64= yythunkpos;  if (!yy__()) goto l64;  goto l63;
  l64:;	  yypos= yypos64; yythunkpos= yythunkpos64;
  }
  {  int yypos65= yypos, yythunkpos65= yythunkpos;  if (!yy_OP()) goto l65;  goto l66;
  l65:;	  yypos= yypos65; yythunkpos= yythunkpos65;
  }
  l66:;	
  {  int yypos67= yypos, yythunkpos67= yythunkpos;  if (!yy_literal()) goto l67;  goto l68;
  l67:;	  yypos= yypos67; yythunkpos= yythunkpos67;
  }
  l68:;	  yyDo(yy_1_attr, yybegin, yyend);  goto l61;
  l62:;	  yypos= yypos61; yythunkpos= yythunkpos61;  if (!yy_literal()) goto l69;
  l70:;	
  {  int yypos71= yypos, yythunkpos71= yythunkpos;  if (!yy__()) goto l71;  goto l70;
  l71:;	  yypos= yypos71; yythunkpos= yythunkpos71;
  }
  {  int yypos72= yypos, yythunkpos72= yythunkpos;  if (!yy_OP()) goto l72;  goto l73;
  l72:;	  yypos= yypos72; yythunkpos= yythunkpos72;
  }
  l73:;	
  {  int yypos74= yypos, yythunkpos74= yythunkpos;  if (!yy_name()) goto l74;  goto l75;
  l74:;	  yypos= yypos74; yythunkpos= yythunkpos74;
  }
  l75:;	  yyDo(yy_2_attr, yybegin, yyend);  goto l61;
  l69:;	  yypos= yypos61; yythunkpos= yythunkpos61;  if (!yy_name()) goto l76;
  l77:;	
  {  int yypos78= yypos, yythunkpos78= yythunkpos;  if (!yy__()) goto l78;  goto l77;
  l78:;	  yypos= yypos78; yythunkpos= yythunkpos78;
  }  if (!yy_OP()) goto l76;  if (!yy_name()) goto l76;  yyDo(yy_3_attr, yybegin, yyend);  goto l61;
  l76:;	  yypos= yypos61; yythunkpos= yythunkpos61;  if (!yy_OP()) goto l60;
  {  int yypos79= yypos, yythunkpos79= yythunkpos;  if (!yy_name()) goto l80;  goto l79;
  l80:;	  yypos= yypos79; yythunkpos= yythunkpos79;  if (!yy_literal()) goto l60;
  }
  l79:;	  yyDo(yy_4_attr, yybegin, yyend);
  }
  l61:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "attr", yybuf+yypos));
  return 1;
  l60:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "attr", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_name()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "name"));  if (!yy_id()) goto l81;
  {  int yypos82= yypos, yythunkpos82= yythunkpos;  if (!yy_PRENS()) goto l83;  if (!yy_id()) goto l83;  goto l82;
  l83:;	  yypos= yypos82; yythunkpos= yythunkpos82;
  {  int yypos84= yypos, yythunkpos84= yythunkpos;  if (!yy_POSTNS()) goto l84;  if (!yy_id()) goto l84;  goto l85;
  l84:;	  yypos= yypos84; yythunkpos= yythunkpos84;
  }
  l85:;	
  }
  l82:;	  yyDo(yy_1_name, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "name", yybuf+yypos));
  return 1;
  l81:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "name", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_literal()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "literal"));
  {  int yypos87= yypos, yythunkpos87= yythunkpos;  if (!yy_str()) goto l88;  goto l87;
  l88:;	  yypos= yypos87; yythunkpos= yythunkpos87;  if (!yy_number()) goto l89;  goto l87;
  l89:;	  yypos= yypos87; yythunkpos= yythunkpos87;  if (!yy_char()) goto l86;
  }
  l87:;	
  l90:;	
  {  int yypos91= yypos, yythunkpos91= yythunkpos;  if (!yy__()) goto l91;  goto l90;
  l91:;	  yypos= yypos91; yythunkpos= yythunkpos91;
  }  yyDo(yy_1_literal, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "literal", yybuf+yypos));
  return 1;
  l86:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "literal", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_children()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "children"));
  {  int yypos93= yypos, yythunkpos93= yythunkpos;  if (!yymatchChar('{')) goto l94;
  l95:;	
  {  int yypos96= yypos, yythunkpos96= yythunkpos;  if (!yy_node()) goto l96;  goto l95;
  l96:;	  yypos= yypos96; yythunkpos= yythunkpos96;
  }
  {  int yypos97= yypos, yythunkpos97= yythunkpos;  if (!yy_tag()) goto l97;  goto l98;
  l97:;	  yypos= yypos97; yythunkpos= yythunkpos97;
  }
  l98:;	  if (!yymatchChar('}')) goto l94;  goto l93;
  l94:;	  yypos= yypos93; yythunkpos= yythunkpos93;
  {  int yypos99= yypos, yythunkpos99= yythunkpos;  if (!yymatchChar(':')) goto l99;
  l101:;	
  {  int yypos102= yypos, yythunkpos102= yythunkpos;  if (!yy_node()) goto l102;  goto l101;
  l102:;	  yypos= yypos102; yythunkpos= yythunkpos102;
  }  goto l100;
  l99:;	  yypos= yypos99; yythunkpos= yythunkpos99;
  }
  l100:;	
  {  int yypos103= yypos, yythunkpos103= yythunkpos;  if (!yymatchChar('.')) goto l104;  goto l103;
  l104:;	  yypos= yypos103; yythunkpos= yythunkpos103;  if (!yymatchChar(';')) goto l92;
  }
  l103:;	
  }
  l93:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "children", yybuf+yypos));
  return 1;
  l92:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "children", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_tag()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "tag"));  if (!yy_name()) goto l105;
  {  int yypos106= yypos, yythunkpos106= yythunkpos;  if (!yy_attributes()) goto l106;  goto l107;
  l106:;	  yypos= yypos106; yythunkpos= yythunkpos106;
  }
  l107:;	  yyDo(yy_1_tag, yybegin, yyend);
  yyprintf((stderr, "  ok   %s @ %s\n", "tag", yybuf+yypos));
  return 1;
  l105:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "tag", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_comment()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "comment"));
  {  int yypos109= yypos, yythunkpos109= yythunkpos;  if (!yymatchString("//")) goto l110;
  l111:;	
  {  int yypos112= yypos, yythunkpos112= yythunkpos;  if (!yymatchClass((unsigned char *)"\377\333\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377\377")) goto l112;  goto l111;
  l112:;	  yypos= yypos112; yythunkpos= yythunkpos112;
  }  goto l109;
